erDiagram
  DEVICES ||--o{ STUDENTS : enrollment_device
  DEVICES ||--o{ ATTENDANCE_EVENTS : submits
  STUDENTS o|--o{ ATTENDANCE_EVENTS : resolved_student

  STUDENTS {
    INTEGER id PK
    TEXT student_uuid UK
    TEXT roll_number UK
    TEXT first_name
    TEXT last_name
    TEXT grade_class
    INTEGER enrollment_device_id FK
    INTEGER fingerprint_slot_id "unique with enrollment_device_id; nullable until enrollment"
    TEXT status
    TEXT created_at_utc
    TEXT updated_at_utc
  }
  DEVICES {
    INTEGER id PK
    TEXT device_uuid UK
    TEXT device_name
    TEXT location_name
    TEXT token_hash
    TEXT status
    TEXT last_seen_at_utc
    INTEGER sensor_capacity
    TEXT created_at_utc
  }
  ATTENDANCE_EVENTS {
    INTEGER id PK "stable ordered SSE cursor"
    TEXT event_uuid UK
    INTEGER student_id FK "nullable after erasure"
    INTEGER device_id FK
    INTEGER fingerprint_slot_id "nullable after erasure"
    TEXT captured_at_utc
    TEXT received_at_utc
    TEXT sync_status
    TEXT outcome
  }
  ADMIN_AUDIT_LOG {
    INTEGER id PK
    TEXT occurred_at_utc
    TEXT actor
    TEXT action
    TEXT target_type
    TEXT target_id
    TEXT details_json
  }
